force-app/main/default/objects/Amendment__c/fields/Amendment_Description__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Description__c</fullName>
    <label>Amendment Description</label>
    <type>TextArea</type>
</CustomField>