force-app/main/default/objects/Amendment__c/fields/Amendment_Number__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Number__c</fullName>
    <externalId>true</externalId>
    <label>Amendment Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>