force-app/main/default/objects/Amendment__c/fields/Amendment_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Signed_Date__c</fullName>
    <label>Amendment Signed Date</label>
    <type>Date</type>
</CustomField>