force-app/main/default/objects/Amendment__c/fields/Amendment_Type__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Type__c</fullName>
    <label>Amendment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add-On</fullName>
            </value>
            <value>
                <fullName>Amend Original</fullName>
            </value>
            <value>
                <fullName>Cancel/Terminate</fullName>
            </value>
            <value>
                <fullName>Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>