force-app/main/default/objects/Amendment__c/fields/Version_Status__c.field-meta.xml
<CustomField>
    <fullName>Version_Status__c</fullName>
    <label>Version Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract In Effect</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>